# rCore-OS

./: .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
os/: Cargo.toml
