[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true
opt-level = 0               # 优化级别,最低是0,最高是3, 0方便debug
overflow-checks = false     # 关闭整数溢出检查